editor: Fix bug #19 where slide preview rendering was broken in Firefox
- The bug where slide previews displayed no content in Firefox was due
  to the way Firefox handles adding content to iframes. Firefox doesn't
  allow adding any content to iframes before a load event is fired on
  them, which is different to eg. Chrome/Chromium. This was solved by
  simply wrapping the preview init code in a load event listener and
  firing the load event manually if the browser is *not* Firefox.
- The preview positioning problem in thumbnails was due to browsers
  handling percentage based padding in flexbox layouts differently.
  The CSS standards are actually to blame here, because it isn't clearly
  defined whether padding percentages are calculated from the parent
  container width or height in flexbox layouts. This bug was solved by
  rewriting the timeline thumbnail HTML/CSS so that it doesn't use
  flexbox.

fixes #19

--- a/src/control/editor/css/_preview.scss
+++ b/src/control/editor/css/_preview.scss
@@ -3,10 +3,12 @@
 *
 * The preview-[16x9/4x3](-fit) classes are meant to be applied to to
 * the div element with the class preview-cont to select the aspect
-* ratio of the preview. The classes without the -fit suffix have
-* width: 100% when viewport width < $preview-breakpoint. When viewport
-* width > $preview-breakpoint, the minimum width of the preview container
-* is $preview-mw. The *-fit classes always have width: 100%.
+* ratio of the preview. The preview-limit class can be used together with
+* the preview-[16x9/4x3] classes to limit the maximum width of the
+* preview so that width: 100% when viewport width < $preview-breakpoint.
+* When viewport width > $preview-breakpoint, the minimum width of the
+* preview container is $preview-mw. The *-fit classes always have
+* width: 100% and can't be used together with preview-limit.
 *  
 */
 
@@ -66,7 +68,7 @@ $preview-breakpoint: 1000px;  // Preview sizing breakpoint.
 }
 
 @media screen and (min-width: $preview-breakpoint) {
-	.preview-16x9 {
+	.preview-16x9.preview-limit {
 		padding-top: 0;
 		height: 9/16*$preview-mw;
 		.preview {
@@ -80,7 +82,7 @@ $preview-breakpoint: 1000px;  // Preview sizing breakpoint.
 		}
 	}
 
-	.preview-4x3 {
+	.preview-4x3.preview-limit {
 		padding-top: 0;
 		height: 3/4*$preview-mw;
 		.preview {
