--- a/src/control/editor/css/_timeline.scss
+++ b/src/control/editor/css/_timeline.scss
@@ -4,6 +4,8 @@
 
 $tl-pad: 4px;                // Timeline slide default padding.
 $tl-slide-cont-width: 200px; // Timeline slide "box" width.
+$tl-index-cont-width: 0.15;  // Relative slide index container width.
+$tl-thumb-cont-width: 1 - $tl-index-cont-width;
 
 #timeline {
 	padding: {
@@ -24,11 +26,15 @@ $tl-slide-cont-width: 200px; // Timeline slide "box" width.
 	padding: 0;
 	min: {
 		width: $tl-slide-cont-width;
-		height: 9/16*10/12*($tl-slide-cont-width + 2*$tl-pad);
+		height: 9/16
+				*$tl-thumb-cont-width
+				*($tl-slide-cont-width + 2*$tl-pad);
 	}
 	max: {
 		width: $tl-slide-cont-width;
-		height: 9/16*10/12*($tl-slide-cont-width + 2*$tl-pad);
+		height: 9/16
+				*$tl-thumb-cont-width
+				*($tl-slide-cont-width + 2*$tl-pad);
 	}
 	background-color: $white;
 	color: $secondary;
@@ -45,22 +51,31 @@ $tl-slide-cont-width: 200px; // Timeline slide "box" width.
 }
 
 .tl-slide-index-cont {
+	display: inline-block;
+	vertical-align: top;
+	width: $tl-index-cont-width*100%;
 	margin: 0;
+
 	padding: $tl-pad;
 	padding-right: 0;
 	text-align: center;
 }
 
 .tl-slide-thumb-cont {
-	margin: 0;
+	height: 100% !important;
+	width: $tl-thumb-cont-width*100% !important;
+	display: inline-block;
+	vertical-align: top;
+
+	margin: 0 !important;
 	padding: 0 {
 		/*
 		*  Overwrite .preview-16x9-fit alignment padding.
 		*/
-		top: calc(0.5625*10/12*(100% + 2*#{$tl-pad})) !important;
+		top: calc(
+			0.5625*#{$tl-thumb-cont-width}*(100% + 2*#{$tl-pad})
+		) !important;
 	}
-	height: 100% !important;
-	width: 100% !important;
 }
 
 .tl-slide-thumb-cont > iframe {
